Adding the required functionalities to the message entity and file uploading